asoe/asg3/yyparse.output
Terminals unused in grammar

   ROOT
   NUMBER
   UNOP
   BINOP
   TOK_NEWSTRING
   TOK_INDEX
   TOK_IFELSE
   TOK_RETURNVOID
   TOK_NULL
   TOK_VARDECL
   TOK_NOT
   TOK_BLOCK
   TOK_CALL
   DECLID
   TOK_FUNCTION
   TOK_PROTOTYPE
   TOK_NEWARRAY
   TOK_TYPEID
   TOK_FIELD
   TOK_ORD
   TOK_CHR
   TOK_ROOT
   TOK_PARAM
   BAD_TOK
   TOK_EXC
   TOK_ARROW
   '.'
   '^'


State 52 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 58 conflicts: 14 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce
State 132 conflicts: 15 shift/reduce
State 136 conflicts: 19 shift/reduce
State 151 conflicts: 15 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program structdef
    3        | program function
    4        | program statement
    5        | program error '}'
    6        | program error ';'
    7        | %empty

    8 structdef: TOK_STRUCT IDENT '{' structfields '}'
    9          | TOK_STRUCT IDENT '{' '}'

   10 structfields: type ';'
   11             | type ';' structfields

   12 type: plaintype IDENT
   13     | TOK_ARRAY '<' plaintype '>'

   14 plaintype: TOK_VOID
   15          | TOK_INT
   16          | TOK_STRING
   17          | TOK_PTR '<' TOK_STRUCT IDENT '>'

   18 function: ident '(' ')' block
   19         | ident '(' idents ')' block
   20         | ident '(' ')' ';'
   21         | ident '(' idents ')' ';'

   22 idents: ident
   23       | idents ',' ident

   24 ident: plaintype TOK_ARRAY IDENT
   25      | plaintype IDENT

   26 block: statements '}'
   27      | '{' '}'

   28 statements: '{' statement
   29           | statements statement

   30 statement: vardecl
   31          | block
   32          | while
   33          | ifelse
   34          | return
   35          | expr ';'
   36          | ';'

   37 vardecl: ident '=' expr ';'
   38        | ident ';'

   39 while: TOK_WHILE '(' expr ')' statements

   40 ifelse: TOK_IF '(' expr ')' statements
   41       | TOK_IF '(' expr ')' statements TOK_ELSE statements

   42 return: TOK_RETURN ';'
   43       | TOK_RETURN expr ';'

   44 expr: expr '=' expr
   45     | expr TOK_EQ expr
   46     | expr TOK_NE expr
   47     | expr '<' expr
   48     | expr TOK_LE expr
   49     | expr '>' expr
   50     | expr TOK_GE expr
   51     | expr '+' expr
   52     | expr '-' expr
   53     | expr '*' expr
   54     | expr '/' expr
   55     | expr '%' expr
   56     | TOK_POS expr
   57     | TOK_NEG expr
   58     | '!' expr
   59     | alloc
   60     | call
   61     | '(' expr ')'
   62     | variable
   63     | constant

   64 alloc: TOK_ALLOC '<' TOK_STRUCT IDENT '>' '(' ')'
   65      | TOK_ALLOC '<' TOK_STRING '>' '(' expr ')'
   66      | TOK_ALLOC '<' TOK_ARRAY '<' plaintype '>' '>' '(' expr ')'

   67 call: params ')'
   68     | IDENT '(' ')'

   69 params: IDENT '(' expr
   70       | params ',' expr

   71 variable: IDENT
   72         | expr '[' expr ']'
   73         | expr TOK_PTR IDENT

   74 constant: TOK_STRINGCON
   75         | TOK_CHARCON
   76         | TOK_INTCON
   77         | TOK_NULLPTR


Terminals, with rules where they appear

$end (0) 0
'!' (33) 58
'%' (37) 55
'(' (40) 18 19 20 21 39 40 41 61 64 65 66 68 69
')' (41) 18 19 20 21 39 40 41 61 64 65 66 67 68
'*' (42) 53
'+' (43) 51
',' (44) 23 70
'-' (45) 52
'.' (46)
'/' (47) 54
';' (59) 6 10 11 20 21 35 36 37 38 42 43
'<' (60) 13 17 47 64 65 66
'=' (61) 37 44
'>' (62) 13 17 49 64 65 66
'[' (91) 72
']' (93) 72
'^' (94)
'{' (123) 8 9 27 28
'}' (125) 5 8 9 26 27
error (256) 5 6
ROOT (258)
IDENT (259) 8 9 12 17 24 25 64 68 69 71 73
NUMBER (260)
UNOP (261)
BINOP (262)
TOK_NEWSTRING (263)
TOK_INDEX (264)
TOK_IF (265) 40 41
TOK_ELSE (266) 41
TOK_IFELSE (267)
TOK_ALLOC (268) 64 65 66
TOK_NULLPTR (269) 77
TOK_WHILE (270) 39
TOK_RETURN (271) 42 43
TOK_RETURNVOID (272)
TOK_INT (273) 15
TOK_STRING (274) 16 65
TOK_STRUCT (275) 8 9 17 64
TOK_VOID (276) 14
TOK_NULL (277)
TOK_ARRAY (278) 13 24 66
TOK_VARDECL (279)
TOK_EQ (280) 45
TOK_NE (281) 46
TOK_LE (282) 48
TOK_GE (283) 50
TOK_NOT (284)
TOK_PTR (285) 17 73
TOK_BLOCK (286)
TOK_CALL (287)
DECLID (288)
TOK_FUNCTION (289)
TOK_PROTOTYPE (290)
TOK_POS (291) 56
TOK_NEG (292) 57
TOK_NEWARRAY (293)
TOK_TYPEID (294)
TOK_FIELD (295)
TOK_ORD (296)
TOK_CHR (297)
TOK_ROOT (298)
TOK_PARAM (299)
BAD_TOK (300)
TOK_EXC (301)
TOK_INTCON (302) 76
TOK_CHARCON (303) 75
TOK_STRINGCON (304) 74
TOK_ARROW (305)


Nonterminals, with rules where they appear

$accept (70)
    on left: 0
start (71)
    on left: 1, on right: 0
program (72)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4 5 6
structdef (73)
    on left: 8 9, on right: 2
structfields (74)
    on left: 10 11, on right: 8 11
type (75)
    on left: 12 13, on right: 10 11
plaintype (76)
    on left: 14 15 16 17, on right: 12 13 24 25 66
function (77)
    on left: 18 19 20 21, on right: 3
idents (78)
    on left: 22 23, on right: 19 21 23
ident (79)
    on left: 24 25, on right: 18 19 20 21 22 23 37 38
block (80)
    on left: 26 27, on right: 18 19 31
statements (81)
    on left: 28 29, on right: 26 29 39 40 41
statement (82)
    on left: 30 31 32 33 34 35 36, on right: 4 28 29
vardecl (83)
    on left: 37 38, on right: 30
while (84)
    on left: 39, on right: 32
ifelse (85)
    on left: 40 41, on right: 33
return (86)
    on left: 42 43, on right: 34
expr (87)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63, on right: 35 37 39 40 41 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 61 65 66 69 70 72 73
alloc (88)
    on left: 64 65 66, on right: 59
call (89)
    on left: 67 68, on right: 60
params (90)
    on left: 69 70, on right: 67 70
variable (91)
    on left: 71 72 73, on right: 62
constant (92)
    on left: 74 75 76 77, on right: 63


State 0

    0 $accept: . start $end

    $default  reduce using rule 7 (program)

    start    go to state 1
    program  go to state 2


State 1

    0 $accept: start . $end

    $end  shift, and go to state 3


State 2

    1 start: program .
    2 program: program . structdef
    3        | program . function
    4        | program . statement
    5        | program . error '}'
    6        | program . error ';'

    error          shift, and go to state 4
    IDENT          shift, and go to state 5
    TOK_IF         shift, and go to state 6
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_WHILE      shift, and go to state 9
    TOK_RETURN     shift, and go to state 10
    TOK_INT        shift, and go to state 11
    TOK_STRING     shift, and go to state 12
    TOK_STRUCT     shift, and go to state 13
    TOK_VOID       shift, and go to state 14
    TOK_PTR        shift, and go to state 15
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    '{'            shift, and go to state 22
    ';'            shift, and go to state 23
    '!'            shift, and go to state 24

    $end  reduce using rule 1 (start)

    structdef   go to state 25
    plaintype   go to state 26
    function    go to state 27
    ident       go to state 28
    block       go to state 29
    statements  go to state 30
    statement   go to state 31
    vardecl     go to state 32
    while       go to state 33
    ifelse      go to state 34
    return      go to state 35
    expr        go to state 36
    alloc       go to state 37
    call        go to state 38
    params      go to state 39
    variable    go to state 40
    constant    go to state 41


State 3

    0 $accept: start $end .

    $default  accept


State 4

    5 program: program error . '}'
    6        | program error . ';'

    '}'  shift, and go to state 42
    ';'  shift, and go to state 43


State 5

   68 call: IDENT . '(' ')'
   69 params: IDENT . '(' expr
   71 variable: IDENT .

    '('  shift, and go to state 44

    $default  reduce using rule 71 (variable)


State 6

   40 ifelse: TOK_IF . '(' expr ')' statements
   41       | TOK_IF . '(' expr ')' statements TOK_ELSE statements

    '('  shift, and go to state 45


State 7

   64 alloc: TOK_ALLOC . '<' TOK_STRUCT IDENT '>' '(' ')'
   65      | TOK_ALLOC . '<' TOK_STRING '>' '(' expr ')'
   66      | TOK_ALLOC . '<' TOK_ARRAY '<' plaintype '>' '>' '(' expr ')'

    '<'  shift, and go to state 46


State 8

   77 constant: TOK_NULLPTR .

    $default  reduce using rule 77 (constant)


State 9

   39 while: TOK_WHILE . '(' expr ')' statements

    '('  shift, and go to state 47


State 10

   42 return: TOK_RETURN . ';'
   43       | TOK_RETURN . expr ';'

    IDENT          shift, and go to state 5
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    ';'            shift, and go to state 48
    '!'            shift, and go to state 24

    expr      go to state 49
    alloc     go to state 37
    call      go to state 38
    params    go to state 39
    variable  go to state 40
    constant  go to state 41


State 11

   15 plaintype: TOK_INT .

    $default  reduce using rule 15 (plaintype)


State 12

   16 plaintype: TOK_STRING .

    $default  reduce using rule 16 (plaintype)


State 13

    8 structdef: TOK_STRUCT . IDENT '{' structfields '}'
    9          | TOK_STRUCT . IDENT '{' '}'

    IDENT  shift, and go to state 50


State 14

   14 plaintype: TOK_VOID .

    $default  reduce using rule 14 (plaintype)


State 15

   17 plaintype: TOK_PTR . '<' TOK_STRUCT IDENT '>'

    '<'  shift, and go to state 51


State 16

   56 expr: TOK_POS . expr

    IDENT          shift, and go to state 5
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    '!'            shift, and go to state 24

    expr      go to state 52
    alloc     go to state 37
    call      go to state 38
    params    go to state 39
    variable  go to state 40
    constant  go to state 41


State 17

   57 expr: TOK_NEG . expr

    IDENT          shift, and go to state 5
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    '!'            shift, and go to state 24

    expr      go to state 53
    alloc     go to state 37
    call      go to state 38
    params    go to state 39
    variable  go to state 40
    constant  go to state 41


State 18

   76 constant: TOK_INTCON .

    $default  reduce using rule 76 (constant)


State 19

   75 constant: TOK_CHARCON .

    $default  reduce using rule 75 (constant)


State 20

   74 constant: TOK_STRINGCON .

    $default  reduce using rule 74 (constant)


State 21

   61 expr: '(' . expr ')'

    IDENT          shift, and go to state 5
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    '!'            shift, and go to state 24

    expr      go to state 54
    alloc     go to state 37
    call      go to state 38
    params    go to state 39
    variable  go to state 40
    constant  go to state 41


State 22

   27 block: '{' . '}'
   28 statements: '{' . statement

    IDENT          shift, and go to state 5
    TOK_IF         shift, and go to state 6
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_WHILE      shift, and go to state 9
    TOK_RETURN     shift, and go to state 10
    TOK_INT        shift, and go to state 11
    TOK_STRING     shift, and go to state 12
    TOK_VOID       shift, and go to state 14
    TOK_PTR        shift, and go to state 15
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    '{'            shift, and go to state 22
    '}'            shift, and go to state 55
    ';'            shift, and go to state 23
    '!'            shift, and go to state 24

    plaintype   go to state 26
    ident       go to state 56
    block       go to state 29
    statements  go to state 30
    statement   go to state 57
    vardecl     go to state 32
    while       go to state 33
    ifelse      go to state 34
    return      go to state 35
    expr        go to state 36
    alloc       go to state 37
    call        go to state 38
    params      go to state 39
    variable    go to state 40
    constant    go to state 41


State 23

   36 statement: ';' .

    $default  reduce using rule 36 (statement)


State 24

   58 expr: '!' . expr

    IDENT          shift, and go to state 5
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    '!'            shift, and go to state 24

    expr      go to state 58
    alloc     go to state 37
    call      go to state 38
    params    go to state 39
    variable  go to state 40
    constant  go to state 41


State 25

    2 program: program structdef .

    $default  reduce using rule 2 (program)


State 26

   24 ident: plaintype . TOK_ARRAY IDENT
   25      | plaintype . IDENT

    IDENT      shift, and go to state 59
    TOK_ARRAY  shift, and go to state 60


State 27

    3 program: program function .

    $default  reduce using rule 3 (program)


State 28

   18 function: ident . '(' ')' block
   19         | ident . '(' idents ')' block
   20         | ident . '(' ')' ';'
   21         | ident . '(' idents ')' ';'
   37 vardecl: ident . '=' expr ';'
   38        | ident . ';'

    '('  shift, and go to state 61
    ';'  shift, and go to state 62
    '='  shift, and go to state 63


State 29

   31 statement: block .

    $default  reduce using rule 31 (statement)


State 30

   26 block: statements . '}'
   29 statements: statements . statement

    IDENT          shift, and go to state 5
    TOK_IF         shift, and go to state 6
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_WHILE      shift, and go to state 9
    TOK_RETURN     shift, and go to state 10
    TOK_INT        shift, and go to state 11
    TOK_STRING     shift, and go to state 12
    TOK_VOID       shift, and go to state 14
    TOK_PTR        shift, and go to state 15
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    '{'            shift, and go to state 22
    '}'            shift, and go to state 64
    ';'            shift, and go to state 23
    '!'            shift, and go to state 24

    plaintype   go to state 26
    ident       go to state 56
    block       go to state 29
    statements  go to state 30
    statement   go to state 65
    vardecl     go to state 32
    while       go to state 33
    ifelse      go to state 34
    return      go to state 35
    expr        go to state 36
    alloc       go to state 37
    call        go to state 38
    params      go to state 39
    variable    go to state 40
    constant    go to state 41


State 31

    4 program: program statement .

    $default  reduce using rule 4 (program)


State 32

   30 statement: vardecl .

    $default  reduce using rule 30 (statement)


State 33

   32 statement: while .

    $default  reduce using rule 32 (statement)


State 34

   33 statement: ifelse .

    $default  reduce using rule 33 (statement)


State 35

   34 statement: return .

    $default  reduce using rule 34 (statement)


State 36

   35 statement: expr . ';'
   44 expr: expr . '=' expr
   45     | expr . TOK_EQ expr
   46     | expr . TOK_NE expr
   47     | expr . '<' expr
   48     | expr . TOK_LE expr
   49     | expr . '>' expr
   50     | expr . TOK_GE expr
   51     | expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '%' expr
   72 variable: expr . '[' expr ']'
   73         | expr . TOK_PTR IDENT

    TOK_EQ   shift, and go to state 66
    TOK_NE   shift, and go to state 67
    TOK_LE   shift, and go to state 68
    TOK_GE   shift, and go to state 69
    TOK_PTR  shift, and go to state 70
    '['      shift, and go to state 71
    ';'      shift, and go to state 72
    '='      shift, and go to state 73
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '*'      shift, and go to state 76
    '/'      shift, and go to state 77
    '%'      shift, and go to state 78
    '<'      shift, and go to state 79
    '>'      shift, and go to state 80


State 37

   59 expr: alloc .

    $default  reduce using rule 59 (expr)


State 38

   60 expr: call .

    $default  reduce using rule 60 (expr)


State 39

   67 call: params . ')'
   70 params: params . ',' expr

    ')'  shift, and go to state 81
    ','  shift, and go to state 82


State 40

   62 expr: variable .

    $default  reduce using rule 62 (expr)


State 41

   63 expr: constant .

    $default  reduce using rule 63 (expr)


State 42

    5 program: program error '}' .

    $default  reduce using rule 5 (program)


State 43

    6 program: program error ';' .

    $default  reduce using rule 6 (program)


State 44

   68 call: IDENT '(' . ')'
   69 params: IDENT '(' . expr

    IDENT          shift, and go to state 5
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    ')'            shift, and go to state 83
    '!'            shift, and go to state 24

    expr      go to state 84
    alloc     go to state 37
    call      go to state 38
    params    go to state 39
    variable  go to state 40
    constant  go to state 41


State 45

   40 ifelse: TOK_IF '(' . expr ')' statements
   41       | TOK_IF '(' . expr ')' statements TOK_ELSE statements

    IDENT          shift, and go to state 5
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    '!'            shift, and go to state 24

    expr      go to state 85
    alloc     go to state 37
    call      go to state 38
    params    go to state 39
    variable  go to state 40
    constant  go to state 41


State 46

   64 alloc: TOK_ALLOC '<' . TOK_STRUCT IDENT '>' '(' ')'
   65      | TOK_ALLOC '<' . TOK_STRING '>' '(' expr ')'
   66      | TOK_ALLOC '<' . TOK_ARRAY '<' plaintype '>' '>' '(' expr ')'

    TOK_STRING  shift, and go to state 86
    TOK_STRUCT  shift, and go to state 87
    TOK_ARRAY   shift, and go to state 88


State 47

   39 while: TOK_WHILE '(' . expr ')' statements

    IDENT          shift, and go to state 5
    TOK_ALLOC      shift, and go to state 7
    TOK_NULLPTR    shift, and go to state 8
    TOK_POS        shift, and go to state 16
    TOK_NEG        shift, and go to state 17
    TOK_INTCON     shift, and go to state 18
    TOK_CHARCON    shift, and go to state 19
    TOK_STRINGCON  shift, and go to state 20
    '('            shift, and go to state 21
    '!'            shift, and go to state 24

    expr      go to state 89
    alloc     go to state 37
    call      go to state 38
    params    go to state 39
    variable  go to state 40
    constant  go to state 41


State 48

   42 return: TOK_RETURN ';' .

    $default  reduce using rule 42 (return)


State 49

   43 return: TOK_RETURN expr . ';'
   44 expr: expr . '=' expr
   45     | expr . TOK_EQ expr
   46     | expr . TOK_NE expr
   47     | expr . '<' expr
   48     | expr . TOK_LE expr
   49     | expr . '>' expr
   50     | expr . TOK_GE expr
   51     | expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '%' expr
   72 variable: expr . '[' expr ']'
   73         | expr . TOK_PTR IDENT

    TOK_EQ   shift, and go to state 66
    TOK_NE   shift, and go to state 67
    TOK_LE   shift, and go to state 68
    TOK_GE   shift, and go to state 69
    TOK_PTR  shift, and go to state 70
    '['      shift, and go to state 71
    ';'      shift, and go to state 90
    '='      shift, and go to state 73
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '*'      shift, and go to state 76
    '/'      shift, and go to state 77
    '%'      shift, and go to state 78
    '<'      shift, and go to state 79
    '>'      shift, and go to state 80


State 50

    8 structdef: TOK_STRUCT IDENT . '{' structfields '}'
    9          | TOK_STRUCT IDENT . '{' '}'

    '{'  shift, and go to state 91


State 51

   17 plaintype: TOK_PTR '<' . TOK_STRUCT IDENT '>'

    TOK_STRUCT  shift, and go to state 92


State 52

   44 expr: expr . '=' expr
   45     | expr . TOK_EQ expr
   46     | expr . TOK_NE expr
   47     | expr . '<' expr
   48     | expr . TOK_LE expr
   49     | expr . '>' expr
   50     | expr . TOK_GE expr
   51     | expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '%' expr
   56     | TOK_POS expr .
   72 variable: expr . '[' expr ']'
   73         | expr . TOK_PTR IDENT

    TOK_PTR  shift, and go to state 70
    '['      shift, and go to state 71

    TOK_PTR   [reduce using rule 56 (expr)]
    $default  reduce using rule 56 (expr)


State 53
